--- a/products.html
+++ b/products.html
@@ -1,8 +1,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="../css/index_style.css">
-        <script src="../js/products.js"></script>
+        <link rel="stylesheet" href="./css/products_styles.css">
     </head>
 
     <body style="margin: 0;">
@@ -28,22 +27,23 @@
                 <button data-target="#joggers">Joggers</button>
             </div>
             <hr />
-            <div class="product-class" id="t-shirts" >
+            <div class="product-class" id="t-shirts">
                 div 1
             </div>
-            <div class="product-class" id="formal-trousers" >
+            <div class="product-class" id="formal-trousers">
                 div 2
             </div>
-            <div class="product-class" id="joggers" >
+            <div class="product-class" id="joggers">
                 div 3
             </div>
-            <div class="product-class" id="suits" >
-
+            <div class="product-class" id="suits">
+                div 4
             </div>
-            <div class="product-class" id="sweater" >
-
+            <div class="product-class" id="sweater">
+                div 5
             </div>
         </main>
-        
+        <script src="./js/products.js"></script>
+    
     </body>
 </html>
