changes on navbar and home page
added icons on the nav bar
added marquee and a background style on index

--- a/index.html
+++ b/index.html
@@ -7,30 +7,43 @@
     <body style="margin: 0;">
         <nav class="navbar sticky-top navbar-dark">
             <div class="container-fluid" id="nav-items">
-              <div class="navbar-links">
-                <a class="navbar-brand" href="index.html">HOME</a>
-                <a class="navbar-brand" href="products.html">OUR PRODUCTS</a>
-                <a class="navbar-brand" href="contact_us.html">CONTACT US</a>
-                <a class="navbar-brand" href="about_us.html">ABOUT US</a>
-              </div>
+                <div class="navbar-links">
+                    <a class="navbar-brand" href="index.html">
+                        <i class="fas fa-home"></i> HOME
+                    </a>
+                    <a class="navbar-brand" href="products.html">
+                        <i class="fas fa-box-open"></i> OUR PRODUCTS
+                    </a>
+                    <a class="navbar-brand" href="contact_us.html">
+                        <i class="fas fa-envelope"></i> CONTACT US
+                    </a>
+                    <a class="navbar-brand" href="about_us.html">
+                        <i class="fas fa-info-circle"></i> ABOUT US
+                    </a>
+                </div>
         
               <div class="navbar-brand" id="nav-profile">
                 
-                <span class="logo-text"><img src="../images/logo.PNG" alt="Placeholder Image">our Essentials</span>
+                <span class="logo-text"><img src="../images/logo.PNG" alt="...">our Essentials</span>
               </div>
             </div>
           </nav>
+          <marquee class="scrolling-text" behavior="scroll" direction="left" scrollamount="5" width="25%">
+            New Arrivals
+        </marquee>
           <div class="col">
             <div class="row">
                 <div class="col-md-3">
                     <div class="card" style="width: 100%;">
-                        <img src="https://via.placeholder.com/60" class="card-img-top" alt="...">
+                        <img src="https://m.media-amazon.com/images/I/71taoF-+q9L._AC_UL1500_.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Product Name</h5>
-                            <p class="card-text">Description</p>
+                            <h5 class="card-title">Summer Shirt</h5>
+                            <p class="card-text">Summer Shirts for Men, Mens Hawaiian Floral Shirts Casual Short Sleeve Button Down Shirt Summer Shirts for Men</p>
                         </div>
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item"><h6>Price: </h6>$</li>
+                        <ul class="list-group list-group-flush d-flex">
+                            <li class="list-group-item d-flex align-items-center">
+                                <h6 class="mb-0">Price:</h6> <span>$25.00</span>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -41,8 +54,10 @@
                             <h5 class="card-title">Product Name</h5>
                             <p class="card-text">Description</p>
                         </div>
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item"><h6>Price: </h6>$</li>
+                        <ul class="list-group list-group-flush d-flex">
+                            <li class="list-group-item d-flex align-items-center">
+                                <h6 class="mb-0">Price:</h6> <span>$</span>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -53,8 +68,10 @@
                             <h5 class="card-title">Product Name</h5>
                             <p class="card-text">Description</p>
                         </div>
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item"><h6>Price: </h6>$</li>
+                        <ul class="list-group list-group-flush d-flex">
+                            <li class="list-group-item d-flex align-items-center">
+                                <h6 class="mb-0">Price:</h6> <span>$</span>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -65,58 +82,10 @@
                             <h5 class="card-title">Product Name</h5>
                             <p class="card-text">Description</p>
                         </div>
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item"><h6>Price: </h6>$</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-3">
-                    <div class="card" style="width: 100%;">
-                        <img src="https://via.placeholder.com/60" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Product Name</h5>
-                            <p class="card-text">Description</p>
-                        </div>
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item"><h6>Price: </h6>$</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="card" style="width: 100%;">
-                        <img src="https://via.placeholder.com/60" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Product Name</h5>
-                            <p class="card-text">Description</p>
-                        </div>
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item"><h6>Price: </h6>$</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="card" style="width: 100%;">
-                        <img src="https://via.placeholder.com/60" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Product Name</h5>
-                            <p class="card-text">Description</p>
-                        </div>
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item"><h6>Price: </h6>$</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="card" style="width: 100%;">
-                        <img src="https://via.placeholder.com/60" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Product Name</h5>
-                            <p class="card-text">Description</p>
-                        </div>
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item"><h6>Price: </h6>$</li>
+                        <ul class="list-group list-group-flush d-flex">
+                            <li class="list-group-item d-flex align-items-center">
+                                <h6 class="mb-0">Price:</h6> <span>$</span>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -129,8 +98,10 @@
                             <h5 class="card-title">Product Name</h5>
                             <p class="card-text">Description</p>
                         </div>
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item"><h6>Price: </h6>$</li>
+                        <ul class="list-group list-group-flush d-flex">
+                            <li class="list-group-item d-flex align-items-center">
+                                <h6 class="mb-0">Price:</h6> <span>$</span>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -141,8 +112,10 @@
                             <h5 class="card-title">Product Name</h5>
                             <p class="card-text">Description</p>
                         </div>
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item"><h6>Price: </h6>$</li>
+                        <ul class="list-group list-group-flush d-flex">
+                            <li class="list-group-item d-flex align-items-center">
+                                <h6 class="mb-0">Price:</h6> <span>$</span>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -153,8 +126,10 @@
                             <h5 class="card-title">Product Name</h5>
                             <p class="card-text">Description</p>
                         </div>
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item"><h6>Price: </h6>$</li>
+                        <ul class="list-group list-group-flush d-flex">
+                            <li class="list-group-item d-flex align-items-center">
+                                <h6 class="mb-0">Price:</h6> <span>$</span>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -165,8 +140,68 @@
                             <h5 class="card-title">Product Name</h5>
                             <p class="card-text">Description</p>
                         </div>
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item"><h6>Price: </h6>$</li>
+                        <ul class="list-group list-group-flush d-flex">
+                            <li class="list-group-item d-flex align-items-center">
+                                <h6 class="mb-0">Price:</h6> <span>$</span>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="card" style="width: 100%;">
+                        <img src="https://via.placeholder.com/60" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Product Name</h5>
+                            <p class="card-text">Description</p>
+                        </div>
+                        <ul class="list-group list-group-flush d-flex">
+                            <li class="list-group-item d-flex align-items-center">
+                                <h6 class="mb-0">Price:</h6> <span>$</span>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="card" style="width: 100%;">
+                        <img src="https://via.placeholder.com/60" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Product Name</h5>
+                            <p class="card-text">Description</p>
+                        </div>
+                        <ul class="list-group list-group-flush d-flex">
+                            <li class="list-group-item d-flex align-items-center">
+                                <h6 class="mb-0">Price:</h6> <span>$</span>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="card" style="width: 100%;">
+                        <img src="https://via.placeholder.com/60" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Product Name</h5>
+                            <p class="card-text">Description</p>
+                        </div>
+                        <ul class="list-group list-group-flush d-flex">
+                            <li class="list-group-item d-flex align-items-center">
+                                <h6 class="mb-0">Price:</h6> <span>$</span>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="card" style="width: 100%;">
+                        <img src="https://via.placeholder.com/60" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Product Name</h5>
+                            <p class="card-text">Description</p>
+                        </div>
+                        <ul class="list-group list-group-flush d-flex">
+                            <li class="list-group-item d-flex align-items-center">
+                                <h6 class="mb-0">Price:</h6> <span>$</span>
+                            </li>
                         </ul>
                     </div>
                 </div>
