--- a/contact_us.html
+++ b/contact_us.html
@@ -2,6 +2,7 @@
     <head>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
         <link rel="stylesheet" href="../css/index_style.css">
+        <title>your essentials|Get in touch</title>
     </head>
 
     <body style="margin: 0;">
