--- a/products.html
+++ b/products.html
@@ -2,6 +2,8 @@
     <head>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
         <link rel="stylesheet" href="./css/products_styles.css">
+        <title>your essentials|Products</title>
+
     </head>
 
     <body style="margin: 0;">
