--- a/about_us.html
+++ b/about_us.html
@@ -37,26 +37,26 @@
 
     <div class="container mt-5">
       <p class="text-center">
-        Welcome to Your Essentials store! We are your one-stop shop for stylish
-        clothing, exquisite jewelry, and comfortable footwear.
+        Welcome to Your Essentials store! We are your one-stop shop for the latest tech gadgets, from cutting-edge smartphones and laptops to innovative smart home devices and wearables.
       </p>
 
       <h2><i class="fas fa-history icon"></i>Our Story</h2>
       <p>
-        Founded in 2018, Yours Essentials was created out of a passion for
-        fashion and a desire to provide customers with high-quality products
-        that express their unique style. What started as a small venture has
-        grown into a diverse collection of clothing, jewelry, and footwear
-        designed to meet the needs of fashion enthusiasts everywhere.
+        Founded in 2018, Your Essentials was born out of a passion for technology and a
+        mission to bring the best in consumer electronics to tech enthusiasts
+        everywhere. What started as a small online venture has grown into a
+        trusted destination for gadget lovers looking for quality, innovation,
+        and the latest tech trends.
       </p>
 
       <h2><i class="fas fa-bullseye icon"></i>Our Mission</h2>
       <p>
-        At Yours Essentials, our mission is to empower individuals to express
-        themselves through fashion. We believe that everyone deserves access to
-        quality products that inspire confidence and creativity. Our commitment
-        to exceptional quality, affordability, and customer satisfaction drives
-        everything we do.
+        At Your Essentials, we aim to empower individuals with technology that enhances
+        their lives. Whether it’s upgrading your home with smart tech, boosting
+        productivity with the latest laptops, or staying connected with advanced
+        mobile devices, we’ve got the gadgets to keep you ahead of the curve.
+        Our focus on quality, affordability, and exceptional customer service
+        drives everything we do.
       </p>
 
       <h2><i class="fas fa-users icon"></i>Meet the Team</h2>
@@ -64,45 +64,45 @@
         <div class="col-md-4 team-member d-flex">
           <div class="card flex-fill team-card">
             <img
-              src="https://i.pinimg.com/236x/fb/d6/ee/fbd6eee743163d88bf0f44d810140870.jpg"
+              src="https://i.pinimg.com/236x/3a/37/57/3a375768ca034cd65bd1343a5a6d5c43.jpg"
               alt="Mary Cynthia"
               class="rounded-circle mb-3"
             />
             <h5>Mary Cynthia</h5>
             <p>Founder & CEO</p>
             <p>
-              With a keen eye for trends, Mary leads our team with a passion for
-              fashion.
+              Mary leads our team with a passion for cutting-edge technology and
+              a vision to make innovation accessible to all.
             </p>
           </div>
         </div>
         <div class="col-md-4 team-member d-flex">
           <div class="card flex-fill team-card">
             <img
-              src="https://i.pinimg.com/236x/ef/97/96/ef97967485381b736664e57c0948999d.jpg"
+              src="https://i.pinimg.com/236x/55/3a/60/553a602450aaf116215f5aa0fe8f88c6.jpg"
               alt="Jane Smith"
               class="rounded-circle mb-3"
             />
-            <h5>Jane Smith</h5>
-            <p>Head of Design</p>
+            <h5>Jonh Smith</h5>
+            <p>Head of Product Development</p>
             <p>
-              Jane curates our collections, ensuring they reflect the latest
-              styles and trends.
+              John ensures that Your Essentials's product range is filled with the
+              latest and most advanced tech gadgets on the market.
             </p>
           </div>
         </div>
         <div class="col-md-4 team-member d-flex">
           <div class="card flex-fill team-card">
             <img
-              src="https://i.pinimg.com/236x/77/87/14/77871434977a071841026ed3d0272666.jpg"
-              alt="Emily Johnson"
+              src="https://i.pinimg.com/control/236x/e0/78/c1/e078c1f7a781bb3933a906544b3541ac.jpg"
+              alt="Jim Goore"
               class="rounded-circle mb-3"
             />
-            <h5>Emily Johnson</h5>
-            <p>Customer Support Manager</p>
+            <h5>Jim Goore</h5>
+            <p>Customer Experience Manager</p>
             <p>
-              Emily is dedicated to ensuring a seamless shopping experience for
-              all our customers.
+              Jim is dedicated to providing tech enthusiasts with a seamless
+              shopping experience and top-notch customer support.
             </p>
           </div>
         </div>
@@ -110,24 +110,24 @@
 
       <h2><i class="fas fa-trophy icon"></i>Our Achievements</h2>
       <p>
-        We are proud to have served thousands of satisfied customers since our
-        launch, receiving awards for our exceptional product quality and
-        customer service.
+        Since our launch, we have proudly served thousands of happy customers,
+        consistently receiving praise for our wide range of high-quality tech
+        products and unbeatable customer service.
       </p>
 
       <h2>
         <i class="fas fa-hand-holding-heart icon"></i>Community Involvement
       </h2>
       <p>
-        Giving back to the community is important to us. We support local
-        charities and initiatives, ensuring that we contribute positively to the
-        world around us.
+        Giving back to the community is at the heart of Your Essentials. We are
+        committed to supporting local tech initiatives, promoting STEM
+        education, and encouraging innovation among young minds.
       </p>
 
       <h2><i class="fas fa-share-alt icon"></i>Join Us</h2>
       <p>
-        Stay connected with us on social media to keep up with our latest
-        collections, exclusive offers, and style tips! Follow us on
+        Stay connected with us on social media for the latest tech news, product
+        launches, and exclusive offers! Follow us on
         <a href="#">Facebook</a>, <a href="#">Instagram</a>, and
         <a href="#">Twitter</a>.
       </p>
@@ -140,6 +140,25 @@
         >
         or call us at <a href="tel:+263789752679">+263 789752679</a>.
       </p>
+    </div>
+    <div class="footer">
+      <div class="container">
+        <div class="footer-icons">
+          <a href="#"><i class="fab fa-facebook-f"></i></a>
+          <a href="#"><i class="fab fa-instagram"></i></a>
+          <a href="#"><i class="fab fa-youtube"></i></a>
+          <a href="#"><i class="fab fa-pinterest-p"></i></a>
+        </div>
+
+        <div class="copyright">
+          &copy; 2024 h230223m. All Rights Reserved.
+        </div>
+
+        <!-- Back to Top Arrow -->
+        <div class="back-to-top" onclick="scrollToTop()">
+          <i class="fas fa-arrow-up"></i>
+        </div>
+      </div>
     </div>
   </body>
 </html>
