--- a/contact_us.html
+++ b/contact_us.html
@@ -101,6 +101,25 @@
         </div>
       </div>
     </div>
+    <div class="footer">
+      <div class="container">
+        <div class="footer-icons">
+          <a href="#"><i class="fab fa-facebook-f"></i></a>
+          <a href="#"><i class="fab fa-instagram"></i></a>
+          <a href="#"><i class="fab fa-youtube"></i></a>
+          <a href="#"><i class="fab fa-pinterest-p"></i></a>
+        </div>
+
+        <div class="copyright">
+          &copy; 2024 h230223m. All Rights Reserved.
+        </div>
+
+        <!-- Back to Top Arrow -->
+        <div class="back-to-top" onclick="scrollToTop()">
+          <i class="fas fa-arrow-up"></i>
+        </div>
+      </div>
+    </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
