--- a/about_us.html
+++ b/about_us.html
@@ -160,5 +160,10 @@
         </div>
       </div>
     </div>
+    <script>
+      function scrollToTop() {
+        window.scrollTo({ top: 0, behavior: "smooth" });
+      }
+    </script>
   </body>
 </html>
