--- a/products.html
+++ b/products.html
@@ -1089,5 +1089,10 @@
       </div>
     </main>
     <script src="./js/products.js"></script>
+    <script>
+      function scrollToTop() {
+        window.scrollTo({ top: 0, behavior: "smooth" });
+      }
+    </script>
   </body>
 </html>
